Include linux_trusty_blink_rel in CQ for paint changes

Some paint code has special DCHECK paths. Some CL may pass with DCHECK
but fail without DCHECK. We need a CQ bot to ensure the non-DCHECK path
is not broken.

Bug: 794424
Cq-Include-Trybots: master.tryserver.blink:linux_trusty_blink_rel;master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2
Change-Id: I184efbd8e07a14bd6f4d4767d42c2d14007b957a
Reviewed-on: https://chromium-review.googlesource.com/823762
Reviewed-by: Chris Harrelson <chrishtr@chromium.org>
Commit-Queue: Xianzhu Wang <wangxianzhu@chromium.org>
Cr-Commit-Position: refs/heads/master@{#523827}
Former-commit-id: fb51b1885ed5d11ff92e055ea0d837f7926b9d00